# dev_ops

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  __init__.py  board.json  columns.json  constitution.md  framework_v2_design.md  framework_v2_implementation.md  install.sh  multi_agent_dashboard_plan.md  prd.md  pyproject.toml  run_debug_tests.py  setup.py  task_checked.json  task_initial.json  task_updated.json  update.sh  verify_updates.sh
.dev_ops/: board.json  config.json
dev_ops/: board.json  main.py  mcp_server.py
extension/: .gitignore  .vscodeignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  README.md  REINSTALL.md  esbuild.js  package-lock.json  package.json  pnpm-lock.yaml  script_block_raw.txt  vsc-extension-quickstart.md
installer/: project_ops.py  setup_ops.py
kanban/: board.json  board.md
payload/: dev_ops.md
rules/: artifact_standards.md  cmd_script_commit.md  cmd_script_context.md  cmd_script_maintenance.md  cmd_workflow_adr.md  cmd_workflow_bug.md  cmd_workflow_feature.md  cmd_workflow_plan.md  cmd_workflow_research.md  dev_ops_guide.md  file_config.md  file_dependencies.md  file_factory.md  file_init.md  file_models.md  file_repository.md  file_router.md  file_schemas.md  file_services.md  file_types.md  kanban_policy.md  lang_python.md  lang_rust.md  lang_svelte.md  phase_aligning.md  phase_backlog.md  phase_blocked.md  phase_done.md  phase_implementing.md  phase_inprogress.md  phase_planning.md  phase_research.md  phase_researching.md  phase_review.md  phase_reviewing.md  phase_testing.md  quality_policy.md
scripts/: __init__.py  artifact_ops.py  board_ops.py  bootstrap.py  detectors.py  doc_ops.py  git_ops.py  health_check.py  kanban_ops.py  pr_ops.py  project_ops.py  setup_ops.py  task_ops.py  template_ops.py  utils.py  verify_expansion.py
templates/: adr.md  board.md  board_brownfield.json  bug.md  component.md  feature.md  plan.md  pr_commit.md  prd.md  report.md  research.md  task.md  test_report.md
tests/: __init__.py  conftest.py  test_artifact_ops.py  test_artifact_ops_comprehensive.py  test_board_advanced.py  test_board_agents.py  test_board_checklist.py  test_board_extended.py  test_board_ops.py  test_board_ops_comprehensive.py  test_board_ops_thorough.py  test_board_special_ops.py  test_cross_module.py  test_doc_nav_rlm.py  test_doc_ops.py  test_doc_ops.py.skip  test_doc_ops_comprehensive.py  test_git_ops.py.skip  test_git_ops_comprehensive.py  test_health_check.py  test_health_check_comprehensive.py  test_id_gen.py  test_integration.py  test_integrity.py  test_kanban_ops.py  test_owner_model.py  test_pr_ops.py  test_project_ops.py  test_setup_ops.py  test_setup_ops_comprehensive.py  test_sync_version.py  test_task_ops.py  test_template_ops.py  test_utils.py  test_utils_comprehensive.py  test_z_entry_points.py
workflows/: _template.md  add_feature.md  add_task.md  adr.md  audit_code.md  bootstrap.md  brainstorm.md  (+41 more)
(+1909 files in other folders)
